--- a/configure.ac
+++ b/configure.ac
@@ -2201,9 +2201,9 @@ AC_TYPE_PID_T
 AC_DEFINE_UNQUOTED([RETSIGTYPE],[void],[assume C89 semantics that RETSIGTYPE is always void])
 AC_TYPE_SIZE_T
 AC_TYPE_UID_T
+AC_TYPE_SSIZE_T
+AC_TYPE_LONG_DOUBLE
 
-AC_CHECK_TYPE(ssize_t,
-  AC_DEFINE(HAVE_SSIZE_T, 1, [Define if your compiler provides ssize_t]),,)
 AC_CHECK_TYPE(__uint128_t,
   AC_DEFINE(HAVE_GCC_UINT128_T, 1, [Define if your compiler provides __uint128_t]),,)
 
@@ -2220,10 +2220,7 @@ AC_CHECK_SIZEOF(fpos_t, 4)
 AC_CHECK_SIZEOF(size_t, 4)
 AC_CHECK_SIZEOF(pid_t, 4)
 AC_CHECK_SIZEOF(uintptr_t)
-
-AC_TYPE_LONG_DOUBLE
 AC_CHECK_SIZEOF(long double, 16)
-
 AC_CHECK_SIZEOF(_Bool, 1)
 
 AC_CHECK_SIZEOF(off_t, [], [
