--- a/pyconfig.h.in
+++ b/pyconfig.h.in
@@ -940,9 +940,6 @@
 /* Define to 1 if you have the <spawn.h> header file. */
 #undef HAVE_SPAWN_H
 
-/* Define if your compiler provides ssize_t */
-#undef HAVE_SSIZE_T
-
 /* Define to 1 if you have the `statvfs' function. */
 #undef HAVE_STATVFS
 
@@ -1394,8 +1391,8 @@
 /* The size of `time_t', as computed by sizeof. */
 #undef SIZEOF_TIME_T
 
-/* The size of `uintptr_t', as computed by sizeof. */
-#undef SIZEOF_UINTPTR_T
+/* The size of `uintptr', as computed by sizeof. */
+#undef SIZEOF_UINTPTR
 
 /* The size of `void *', as computed by sizeof. */
 #undef SIZEOF_VOID_P
@@ -1575,6 +1572,9 @@
 
 /* Define to `int' if <sys/socket.h> does not define. */
 #undef socklen_t
+
+/* Define to `int' if <sys/types.h> does not define. */
+#undef ssize_t
 
 /* Define to `int' if <sys/types.h> doesn't define. */
 #undef uid_t
