--- a/.vsts/linux-coverage.yml
+++ b/.vsts/linux-coverage.yml
@@ -71,7 +71,7 @@ steps:
 - script: ./venv/bin/python -m test.pythoninfo
   displayName: 'Display build info'
 
-- script: xvfb-run ./venv/bin/python -m coverage run --pylib -m test --fail-env-changed -uall,-cpu -x test_multiprocessing_fork -x test_multiprocessing_forkserver -x test_multiprocessing_spawn -x test_concurrent_futures
+- script: xvfb-run ./venv/bin/python -m coverage run --pylib --rcfile=.github/coveragerc -m test --fail-env-changed -uall,-cpu -x test_multiprocessing_fork -x test_multiprocessing_forkserver -x test_multiprocessing_spawn -x test_concurrent_futures
   displayName: 'Tests with coverage'
 
 - script: source ./venv/bin/activate && bash <(curl -s https://codecov.io/bash)
